# zkp-verify-dfinity

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/declarations/rust_hello/: rust_hello.did.d.ts  rust_hello.did.js
src/rust_hello/: Cargo.toml
src/rust_hello/src/: lib.rs  rust_hello.did
src/rust_hello/src/common/: mod.rs
src/rust_zkp/: Cargo.toml
src/rust_zkp/src/: lib.rs
