[package]
name = "rust_zkp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zkp"
path = "src/lib.rs"



#[lib]
#crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
bellman = "0.11.1"
rand = "0.8.4"
ff = "0.11"
bls12_381 = "0.6"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
